--- a/map-app/examples/fragments/panel.left.mod.html
+++ b/map-app/examples/fragments/panel.left.mod.html
@@ -19,13 +19,13 @@
     <ul data-role="listview" data-inset="false" data-icon="false">
             <li><a href="index.html" data-ajax='false' data-icon="false"><i class='menu-icon zmdi zmdi-home'></i>Home</a></li>
 
-        <li><a href="/examples/elements/text.html" data-ajax='false' data-icon="false"><i class='menu-icon zmdi zmdi-pin'></i>Locations</a></li>
+        <li><a href="locations.html" data-ajax='false' data-icon="false"><i class='menu-icon zmdi zmdi-pin'></i>Locations</a></li>
 		
-        <li><a href="/examples/elements/grid.html" data-ajax='false' data-icon="false"><i class='menu-icon zmdi zmdi-check-circle'></i>Goals</a></li>
+        <li><a href="#" data-ajax='false' data-icon="false"><i class='menu-icon zmdi zmdi-check-circle'></i>Goals</a></li>
 
-        <li><a href="/examples/elements/buttons.html" data-ajax='false' data-icon="false"><i class='menu-icon zmdi zmdi-face'></i>Buddies</a></li>
+        <li><a href="#" data-ajax='false' data-icon="false"><i class='menu-icon zmdi zmdi-face'></i>Buddies</a></li>
 
-        <li><a href="/examples/elements/header_footer.html" data-ajax='false'><i class='menu-icon zmdi zmdi-replay'></i>History</a></li>
+        <li><a href="#" data-ajax='false'><i class='menu-icon zmdi zmdi-replay'></i>History</a></li>
        
     </ul>
 </div>
